--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,7 @@ JWT_SECRET=<key here>
 JWT_ACCESS_EXPIRATION=1d
 CORS_WHITELIST=test.com
 PORT=5000
-PG_CONN_STRING=postgres://user:pass@host:port/db_name
+MONGO_USERNAME=root
+MONGO_PASSWORD=1234567
+MONGO_HOST=localhost:27017
+MONGO_DB=healngo
