--- a/package.json
+++ b/package.json
@@ -5,17 +5,10 @@
   "main": "./dist/server.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node .",
-    "watch-static": "nodemon --watch src/public --exec npm run copy-static-assets",
     "dev": "cross-env NODE_ENV=development concurrently \"ts-node-dev --respawn --transpile-only -r tsconfig-paths/register ./src/server.ts\"",
     "build-ts": "tsc",
     "build": "cross-env NODE_ENV=production npm run build-ts",
     "build:dev": "cross-env NODE_ENV=development npm run build-ts",
-    "typeorm": "ts-node -r tsconfig-paths/register node_modules\\typeorm\\cli.js -f ./src/ormconfig.ts",
-    "migration:gen": "node ./node_modules/.bin/typeorm migration:generate --config dist/ormconfig.js",
-    "migration:run": "node ./node_modules/.bin/typeorm migration:run --config dist/ormconfig.js",
-    "migration:gen:win": "npm run typeorm migration:generate -- -n migrate",
-    "migration:run:win": "npm run typeorm migration:run",
-    "migration:revert:win": "npm run typeorm migration:revert",
     "lint": "eslint \"./src/**/*.{ts,tsx}\""
   },
   "keywords": [
@@ -35,13 +28,13 @@
     "dayjs": "^1.10.7",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
     "http-status-codes": "^2.2.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.3",
-    "pg-connection-string": "^2.5.0",
+    "mongoose": "^5.12.9",
     "reflect-metadata": "^0.1.13",
     "swagger-autogen": "^2.18.8",
     "swagger-ui-express": "^4.3.0",
@@ -55,6 +48,7 @@
     "@types/express": "^4.17.12",
     "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.3",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^16.3.0",
     "@types/shelljs": "^0.8.11",
     "@types/supertest": "^2.0.11",
