--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -27,7 +27,7 @@ services:
       # host:docker
       - "5000:5000"
     networks:
-      - apinet
+      - api-net
       
 networks: 
     api-net:
