--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^6.0.0-alpha.6",
+    "axios": "^0.27.2",
     "bluebird": "^3.7.2",
     "chalk": "^4.1.2",
     "compression": "^1.7.4",
